[package]
name = "imgui-winit-glow-renderer-viewports"
version = "0.11.0"
edition = "2021"
description = "combined platform + renderer using the docking branch viewport feature"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { version = "0.12.0", features=["docking"] }

glow = "0.16.0"
glutin = "0.32.0"
raw-window-handle = "0.6.2"
winit = "0.30.5"
thiserror = "1.0.38"
glutin-winit = "0.5.0"